[project]
name = "aurora_scripts"
version = "0.1.0"
description = "Mike's scripts to create aurora animations from a DLSR timelapse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "numpy>=2.4.3",
    "pillow>=12.1.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
